# api-finance-tracking

./: .gitignore  .pylintrc  README.rst  pyproject.toml
src/: entry_point.py
src/components/auth/: gmail.py
src/components/auth/constants/: gmail_scopes.py
src/components/email/: labels.py
src/config/: logger.py
tests/: test_api_finance_tracking.py
