[tool.poetry]
name = "api-finance-tracking"
version = "0.1.0"
description = ""
authors = ["Sebastian Parra Quintero <sebastian.parraq96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^2.17.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
